--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <div class="holder">	
-	<div style="background-color:green">3</div>
-	<div style="background-color:red">1</div>
-	<div style="background-color:blue">2</div>	
+	<div id="item1">3</div>
+	<div id="item2">1</div>
+	<div id="item3">2</div>	
 </div>	
 </body>
 
